{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 9,
  "lineage": "9e645930-600a-02fd-1250-7e47b480530a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff290337e78c83bf",
            "arn": "arn:aws:ec2:us-east-1:207706557775:instance/i-066c70c757cad5eeb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066c70c757cad5eeb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "canonical-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0228747830f7176c5",
            "private_dns": "ip-10-0-1-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-34-207-110-190.compute-1.amazonaws.com",
            "public_ip": "34.207.110.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:207706557775:key/b4640353-474b-4553-91ab-21f322e03ea2",
                "tags": {
                  "Name": "canonical-lab-root-vol"
                },
                "tags_all": {
                  "Name": "canonical-lab-root-vol"
                },
                "throughput": 125,
                "volume_id": "vol-0745eeac14d962d2a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a72f1342d900bf3",
            "tags": {
              "Name": "canonical-lab-server-ticket-001",
              "Project": "canonical-cfe-labs",
              "Session": "01",
              "Ticket": "CFE-001"
            },
            "tags_all": {
              "Name": "canonical-lab-server-ticket-001",
              "Project": "canonical-cfe-labs",
              "Session": "01",
              "Ticket": "CFE-001"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04fc95f8437483677"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.lab_key",
            "aws_security_group.lab_sg",
            "aws_subnet.public",
            "aws_vpc.lab_vpc",
            "data.aws_ami.ubuntu",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207706557775:internet-gateway/igw-05502ed20ec9822d9",
            "id": "igw-05502ed20ec9822d9",
            "owner_id": "207706557775",
            "tags": {
              "Name": "canonical-lab-igw"
            },
            "tags_all": {
              "Name": "canonical-lab-igw"
            },
            "vpc_id": "vpc-0ba24b13fb952422f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207706557775:route-table/rtb-065ea92ef67f7c4b5",
            "id": "rtb-065ea92ef67f7c4b5",
            "owner_id": "207706557775",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05502ed20ec9822d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "canonical-lab-public-rt"
            },
            "tags_all": {
              "Name": "canonical-lab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba24b13fb952422f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001eb89c07b9f66e2",
            "route_table_id": "rtb-065ea92ef67f7c4b5",
            "subnet_id": "subnet-07a72f1342d900bf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207706557775:security-group/sg-04fc95f8437483677",
            "description": "Security group for Canonical lab - TICKET-001",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fc95f8437483677",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.90.116.162/32"
                ],
                "description": "Prometheus node_exporter metrics",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "102.90.116.162/32"
                ],
                "description": "SSH from my IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "canonical-lab-sg",
            "name_prefix": "",
            "owner_id": "207706557775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "canonical-lab-sg"
            },
            "tags_all": {
              "Name": "canonical-lab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba24b13fb952422f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207706557775:subnet/subnet-07a72f1342d900bf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a72f1342d900bf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "207706557775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "canonical-lab-public-subnet"
            },
            "tags_all": {
              "Name": "canonical-lab-public-subnet"
            },
            "vpc_id": "vpc-0ba24b13fb952422f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207706557775:vpc/vpc-0ba24b13fb952422f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032f0f099e37e4cd1",
            "default_route_table_id": "rtb-046722602e89e5375",
            "default_security_group_id": "sg-0a06575545725ca0e",
            "dhcp_options_id": "dopt-03ddb8d77375814c2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba24b13fb952422f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046722602e89e5375",
            "owner_id": "207706557775",
            "tags": {
              "Name": "canonical-lab-vpc",
              "Project": "canonical-cfe-labs",
              "Session": "01"
            },
            "tags_all": {
              "Name": "canonical-lab-vpc",
              "Project": "canonical-cfe-labs",
              "Session": "01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}